[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprite/head_enemy/frame01.png" type="Texture" id=1]
[ext_resource path="res://sprite/bee_enemy/frame01.png" type="Texture" id=2]
[ext_resource path="res://objects/spawner/Spawner.gd" type="Script" id=5]

[node name="SpawnReference" type="Node2D"]

[node name="Spawner" type="Position2D" parent="."]
script = ExtResource( 5 )

[node name="height_ref100" type="Sprite" parent="Spawner"]
texture = ExtResource( 1 )

[node name="height_ref300" type="Sprite" parent="Spawner"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )

[node name="height_ref500" type="Sprite" parent="Spawner"]
position = Vector2( 0, -128 )
texture = ExtResource( 2 )

[node name="timer" type="Timer" parent="Spawner"]
[connection signal="timeout" from="Spawner/timer" to="Spawner" method="_on_Timer_timeout"]
